redo works cards & fix sizing/spacing

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -78,12 +78,8 @@ section {
   margin-bottom: 60px;
 
   @media (max-width: $breakpoint1680) {
-    font-size: 80px;
-    margin-bottom: 45px;
-  }
-
-  @media (max-width: $breakpoint1450) {
     font-size: 70px;
+    margin-bottom: 45px;
   }
 
   @media (max-width: $breakpoint1200) {
@@ -113,19 +109,23 @@ section {
   font-size: 30px;
 
   @media (max-width: $breakpoint1680) {
-    font-size: 28px;
-  }
-
-  @media (max-width: $breakpoint1200) {
     font-size: 26px;
   }
 
-  @media (max-width: $breakpoint992) {
+  @media (max-width: $breakpoint1200) {
     font-size: 24px;
+  }
+
+  @media (max-width: $breakpoint992) {
+    font-size: 22px;
   }
 
   @media (max-width: $breakpoint768) {
     font-size: 20px;
+  }
+
+  @media (max-width: $breakpoint576) {
+    font-size: 18px;
   }
 }
 
